Tue Mar 11 03:51:00 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* read.c (scm_read_hash_extend): make scm_read_hash_procedures a 
	pointer to the Scheme variable read-hash-procedures and intern it
 	in scm_init_read. Modify scm_read_hash_extend and 
	scm_get_hash_procedure to use the pointer.

Mon Mar 10 06:28:54 1997  Gary Houston  <ghouston@actrix.gen.nz>	

	* read.h (SCM_N_READ_OPTIONS): increase SCM_N_READ_OPTIONS to 4.
	(SCM_KEYWORD_STYLE): defined.

	* read.c (scm_read_opts): add a keywords option.  This isn't a
 	boolean option, in case someone wants to add support for DSSSL
 	keywords too.
	Setup scm_keyword_prefix symbol.
	(scm_lreadr): Only process keywords if SCM_KEYWORD_STYLE is
	set to 'prefix.
*	I've left keyword support disabled by default, since it doesn't
	seem to break the module system and it gives R4RS standard behaviour.
	It can be reactivated with (read-set! keywords 'prefix).

Sun Mar  9 14:14:39 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* arbiters.c (scm_make_arbiter): Bugfix: Must SCM_DEFER_INTS
	before constructing arbiter.

	* eval.c (scm_m_define): Bugfix: Check that the object is a
	closure before setting the procedure property!

	* ports.h: Removed prototype for scm_ungetc_char_ready_p.

	* ports.c: Removed `ungetc-char-ready?'.

Sat Mar  8 00:27:05 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* read.c (scm_init_read): intitialise scm_read_hash_procedures
	(idea from Mikael: make it a pair so scm_permanent object only
	called once.)
	(scm_read_hash_extend): don't call scm_permanent_object.
	(ideas from Mikael): if chr is already in the list, replace its
	procedure instead of appending it again.  If proc is #f, remove
	it from the list.
	(scm_get_hash_procedure): take CDR of scm_read_hash_procedures.

	* strports.c (scm_read_0str, scm_eval_0str): update scm_read usage.

	* gdbint.c (gdb_read): update scm_lreadr usage.

	* load.h: update prototypes.

	* load.c (scm_primitive_load, scm_read_and_eval_x,